--- a/website.css
+++ b/website.css
@@ -1,5 +1,12 @@
 /* website.css */
 
+header{
+	text-align: center;
+	font-weight: ;
+	font-family: ;
+	font-size: ;
+}
+
 body {
 	font-family: Helvetica;
 	font-size: 28px;
