--- a/website.css
+++ b/website.css
@@ -4,7 +4,7 @@ header {
 	text-align: center;
 	font-weight: ;
 	font-family: Cambria;
-	font-size: 20px;
+	font-size: 25px;
 }
 
 #subheader{
@@ -14,8 +14,20 @@ header {
 }
 
 
-#centerimg {
+.center {
 	display: block;
 	margin-left: auto;
     margin-right: auto;
+}
+
+.subtitle {
+	font-family: Cambria;
+	font-size: 20px;
+	font-weight: bold;
+
+}
+
+.footer {
+	font-family: Cambria;
+	font-size: 14px;
 }
