--- a/website.css
+++ b/website.css
@@ -13,6 +13,11 @@ header {
 	text-align: center;
 }
 
+#content {
+	font-family: Cambria;
+	font-size: 18px;	
+}
+
 
 .center {
 	display: block;
@@ -29,5 +34,6 @@ header {
 
 .footer {
 	font-family: Cambria;
+	text-align: center;
 	font-size: 14px;
 }
