--- a/website.css
+++ b/website.css
@@ -51,5 +51,5 @@ header {
 	font-family: Cambria;
 	font-size: 15px;
 	border-style: dotted;
-	background-color: blue;
+	background-color: #AFEEEE;
 }
