--- a/website.css
+++ b/website.css
@@ -9,6 +9,11 @@ header {
 	font-size: 25px;
 }
 
+body.color {
+	background-color: #D8BFD8;
+
+}
+
 #subheader{
 	font-family: Cambria;
 	font-size: 18px;
