--- a/website.css
+++ b/website.css
@@ -31,6 +31,13 @@ body.color {
     margin-right: auto;
 }
 
+.bottom {
+	position: fixed;
+	bottom: 5px;
+	left: 5px;
+	right: 5px;
+}
+
 .subtitle {
 	font-family: Cambria;
 	font-size: 17px;
